k8s/hello-service.yaml
# kubectl expose service hello-service --type LoadBalancer --port=8080 --target-port=8080 --name=hello-service --dry-run=client -o yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  #namespace: staging
  # annotations:
    # service.beta.kubernetes.io/azure-dns-label-name: $DNS_LABEL
    # service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080  
    name: http-8080
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
  - protocol: TCP
    port: 8081
    targetPort: 8081
    name: management
  selector:
    app: hello-service
  type: LoadBalancer
