k8s/hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-hello
spec:
  ingressClassName: nginx
  rules:
  - host: $ING_HOST
    http:
      paths:
      - path: /hello-service
        pathType: "Prefix"      
        backend:
          service:
            name: hello-service
            port: 
              number: 80                  
      - path: /manage/health
        pathType: "Prefix"
        backend:
          service:
            name: hello-service
            port: 
              number: 8081
      - path: /manage/info
        pathType: "Prefix"
        backend:
          service:
            name: hello-service
            port: 
              number: 8081
